Add some end to end tests with cypress

--- a/prez/index.html
+++ b/prez/index.html
@@ -34,13 +34,13 @@
 					<section>
 						<h3>Tests</h3>
 						<ul>
-							<li>Unitaires</li>
-							<li>Fonctionnels</li>
-							<li>d'architecture</li>
-							<li>Mutation testing</li>
-							<li>End to End</li>
-							<li>Contract testing (API)</li>
-							<li>Pour aller plus loin : PBT</li>
+							<li class="fragment fade-in">Unitaires</li>
+							<li class="fragment fade-in">Fonctionnels</li>
+							<li class="fragment fade-in">d'architecture</li>
+							<li class="fragment fade-in">Mutation testing</li>
+							<li class="fragment fade-in">End to End</li>
+							<li class="fragment fade-in">Contract testing (API)</li>
+							<li class="fragment fade-in">Pour aller plus loin : PBT</li>
 						</ul>
 					</section>
 				</section>
