--- a/prez/index.html
+++ b/prez/index.html
@@ -54,6 +54,8 @@
 					</section>
 					<section>
 						<h2>Anti pattern</h2>
+					</section>
+					<section>
 						<img src="images/test-pyramid.png" alt="test cone anti pattern and pyramid pattern" />
 					</section>
 				</section>
@@ -115,9 +117,11 @@
 						<h3>Mock vs Fake</h3>
 					</section>
 					<section>
+						<h4>Mock</h4>
 						<pre><code>// Test example with mock</code></pre>
 					</section>
 					<section>
+						<h4>Fake</h4>
 						<pre><code>// Test example with fake</code></pre>
 					</section>
 					<section>
