Add mother object

--- a/prez/index.html
+++ b/prez/index.html
@@ -118,7 +118,9 @@
 					</section>
 					<section>
 						<h4>Mock</h4>
-						<pre><code>// Test example with mock</code></pre>
+						<pre><code>
+
+</code></pre>
 					</section>
 					<section>
 						<h4>Fake</h4>
@@ -126,12 +128,16 @@
 					</section>
 					<section>
 						<h3>Factories</h3>
+						<a href="https://martinfowler.com/bliki/ObjectMother.html">Object Mother</a>
 					</section>
 					<section>
 						<pre><code>// Test example with manual object creation</code></pre>
 					</section>
 					<section>
 						<pre><code>// Test example with factory</code></pre>
+					</section>
+					<section>
+						<h3>Chicago vs London</h3>
 					</section>
 					<section>
 						<h2>Outils</h2>
